--- a/portality/templates/leaps/admin/student.html
+++ b/portality/templates/leaps/admin/student.html
@@ -1124,7 +1124,9 @@ fieldset{
 										{% if record.data.interview.emailed_date %}
 												Action plan emailed on {{ record.data.interview.emailed_date }}
 										{% else %}
-												Completed on {{ record.data.interview.completed_date }}
+												{% if record.data.interview.completed_date %}
+														Completed on {{ record.data.interview.completed_date }}
+												{% endif %}
 												{% if record.data.interview.completed_date %}
 														{% if current_user.do_admin %}
 																<!--<a class="btn btn-info" style="margin-top:-10px;" href="/interviews/{{ record.data.id }}/email">Email action plan</a>-->
