add refugee tickbox to export

--- a/portality/templates/leaps/exports/index.html
+++ b/portality/templates/leaps/exports/index.html
@@ -76,9 +76,10 @@ jQuery(document).ready(function() {
                     </tr>
         	        <tr>
 	                    <td><input type="checkbox" name="gender"> Gender</td>
-                        <td><input type="checkbox" name="shep_school"> SHEP school</td>
+											<td><input type="checkbox" name="shep_school"> SHEP school</td>
 	                    <td><input type="checkbox" name="had_recent_careers_interview"> Had recent careers interview</td>
-	                    <td><!--<input type="checkbox" name="mothers_occupation"> Mothers occupation--></td>
+	                    <td><input type="checkbox" name="asylum_refugee"> Refugee / asylum seeker</td>
+	                    <!--<td><input type="checkbox" name="mothers_occupation"> Mothers occupation</td>-->
                     </tr>
         	        <tr>
 	                    <td><input type="checkbox" name="address"> Address</td>
